--- a/.azdo/pipelines/build-infra-deploy-pipeline.yml
+++ b/.azdo/pipelines/build-infra-deploy-pipeline.yml
@@ -72,5 +72,5 @@ stages:
     runDevSecOpsScan: ${{ parameters.runDevSecOpsScan }}
     runPsRuleScan: ${{ parameters.runPsRuleScan }}
     runGHAzDOScan: ${{ parameters.runGHAzDOScan }}
-    workingDirectoryCode: ${{ parameters.workingDirectoryCode }}
-    workingDirectoryInfra: ${{ parameters.workingDirectoryInfra }}
+    workingDirectoryCode: ${{ variables.workingDirectoryCode }}
+    workingDirectoryInfra: ${{ variables.workingDirectoryInfra }}
