Update project build path

--- a/.azdo/pipelines/pipes/templates/build-webapi-template.yml
+++ b/.azdo/pipelines/pipes/templates/build-webapi-template.yml
@@ -9,7 +9,7 @@ parameters:
 - name: buildConfiguration
   default: 'Release'
 - name: rootDirectory
-  default: '/services/Demo.API'
+  default: ''
 
 # ----------------------------------------------------------------------------------------------------
 jobs:
@@ -20,10 +20,13 @@ jobs:
 - job: BuildAPIJob
   displayName: Build API Job
   steps:
+
+
+
   - task: DotNetCoreCLI@2
     displayName: 'Build API project'
     inputs:
-      projects: '${{ parameters.rootDirectory }}/**/*.csproj'
+      projects: '${{ parameters.rootDirectory }}/*.csproj'
       arguments: '--output publish_output --configuration Release'
 
   - task: DotNetCoreCLI@2
@@ -31,7 +34,7 @@ jobs:
     inputs:
       command: publish
       publishWebProjects: false
-      projects: '${{ parameters.rootDirectory }}/**/*.csproj'
+      projects: '${{ parameters.rootDirectory }}/*.csproj'
       arguments: '--configuration $(BuildConfiguration) --output $(build.artifactstagingdirectory)'
       
   - task: PublishPipelineArtifact@1
