--- a/.azdo/pipelines/pipes/templates/deploy-apps-template.yml
+++ b/.azdo/pipelines/pipes/templates/deploy-apps-template.yml
@@ -26,12 +26,27 @@ jobs:
 - job: DeployApps
   displayName: Deploy Apps
   steps:
+  - task: CmdLine@2
+    inputs:
+      script: |
+        echo "stageName=${{ parameters.stageName }}"
+        echo "environment=${{ parameters.environment }}"
+        echo "azureSubscription=${{ parameters.azureSubscription }}"
+        echo "webAppName=${{ parameters.webAppName }}"
+        echo "webAppPackageName=${{ parameters.webAppPackageName }}"
+        echo "apiAppName=${{ parameters.apiAppName }}"
+        echo "apiPackageName=${{ parameters.apiPackageName }}"
+        echo "Directory of Pipeline.Workspace:"
+        dir  $(Pipeline.Workspace) /s
+    displayName: 'Display Variables and Tree'
+    continueOnError: true
+
   - task: AzureRmWebAppDeployment@4
     displayName: '1. Deploy API'
     inputs:
       azureSubscription: ${{ parameters.azureSubscription }}
       WebAppName: ${{ parameters.apiAppName }}
-      package: '$(Pipeline.Workspace)/build/App/${{ parameters.apiPackageName }}'
+      package: '$(Pipeline.Workspace)/build/WebApi/${{ parameters.apiPackageName }}'
       AppSettings: ''
 
   - task: AzureRmWebAppDeployment@4
@@ -39,5 +54,5 @@ jobs:
     inputs:
       azureSubscription: ${{ parameters.azureSubscription }}
       WebAppName: ${{ parameters.webAppName }}
-      package: '$(Pipeline.Workspace)/build/App/${{ parameters.webAppPackageName }}'
+      package: '$(Pipeline.Workspace)/build/WebApp/${{ parameters.webAppPackageName }}'
       AppSettings: ''
