--- a/.azdo/pipelines/build-infra-deploy-pipeline.yml
+++ b/.azdo/pipelines/build-infra-deploy-pipeline.yml
@@ -14,12 +14,12 @@ parameters:
     displayName: Run MS DevSecOps Scan
     type: boolean
     default: false
-  - name: runPsRuleScan
-    displayName: Run PSRule Bicep Scan
-    type: boolean
-    default: false
   - name: runGHAzDOScan
     displayName: Run GHAS Scan
+    type: boolean
+    default: false
+  - name: runPlaywright
+    displayName: Run Playwright Tests
     type: boolean
     default: false
 
@@ -44,13 +44,13 @@ variables:
   # resourceGroupName: 'rutzscodev-demo-webapp-api-auth-api-ci'
 
   # Global variables
-  webAppSourcePath: '/services/Demo.WebUI'
+  webAppSourcePath: 'services/Demo.WebUI'
   webAppPackageName: 'Demo.WebUI.zip'
-  apiSourcePath: '/services/Demo.API'
+  apiSourcePath: 'services/Demo.API'
   apiPackageName: 'Demo.API.zip'
   region: 'East US'
-  workingDirectoryCode: '/services/Demo.WebUI'
-  workingDirectoryInfra: '/infra/'
+  workingDirectoryCode: 'services/Demo.WebUI'
+  workingDirectoryInfra: 'infra/arm/'
   
 stages:
 # ------------------------------------------------------------------------------------------------------------------------
@@ -71,7 +71,6 @@ stages:
     webAppPackageName: ${{ variables.webAppPackageName }}
     webAppSourcePath: ${{ variables.webAppSourcePath }}
     runDevSecOpsScan: ${{ parameters.runDevSecOpsScan }}
-    runPsRuleScan: ${{ parameters.runPsRuleScan }}
     runGHAzDOScan: ${{ parameters.runGHAzDOScan }}
     workingDirectoryCode: ${{ variables.workingDirectoryCode }}
     workingDirectoryInfra: ${{ variables.workingDirectoryInfra }}
