Fix pipe dependency

--- a/.azdo/pipelines/pipes/build-infra-deploy-pipe.yml
+++ b/.azdo/pipelines/pipes/build-infra-deploy-pipe.yml
@@ -89,8 +89,8 @@ stages:
 # ------------------------------------------------------------------------------------------------------------------------
 - stage: DeployApp
   displayName: Deploy App
-  dependsOn: CreateInfra
-  condition: succeeded('CreateInfra')
+  dependsOn: CreateAzureInfra
+  condition: succeeded('CreateAzureInfra')
   jobs:
   - template: templates/deploy-apps-template.yml
     parameters:
