--- a/.azdo/pipelines/pipes/templates/create-infra-template.yml
+++ b/.azdo/pipelines/pipes/templates/create-infra-template.yml
@@ -23,7 +23,7 @@ parameters:
 - name: region
   default: ''
 - name: templateFolderName
-  default: 'infra/arm'
+  default: 'infra\arm'
 
 # ----------------------------------------------------------------------------------------------------
 jobs:
@@ -34,7 +34,7 @@ jobs:
   displayName: Create Infra Job
   variables:
     - name: templateDirectory
-      value: '$(Pipeline.Workspace)/s/${{ parameters.templateFolderName }}'
+      value: '$(Pipeline.Workspace)\s\${{ parameters.templateFolderName }}'
   steps:
   - task: CmdLine@2
     inputs:
@@ -59,7 +59,7 @@ jobs:
       azureSubscription: ${{ parameters.azureSubscription }}
       resourceGroupName: ${{ parameters.resourceGroupName }}
       location: ${{ parameters.region }}
-      csmFile: '$(templateDirectory)/api-management-consumption.json'
+      csmFile: '$(templateDirectory)\api-management-consumption.json'
       overrideParameters: '-apimName ${{ parameters.apiAppAPIMName }}2 -organizationName ${{ parameters.organizationName }} -adminEmail ${{ parameters.adminEmail }}'
       deploymentOutputs: ResourceGroupDeploymentOutputs
 
@@ -69,7 +69,7 @@ jobs:
       azureSubscription: ${{ parameters.azureSubscription }}
       resourceGroupName: ${{ parameters.resourceGroupName }}
       location: ${{ parameters.region }}
-      csmFile: '$(templateDirectory)/api-management-core.json'
+      csmFile: '$(templateDirectory)\api-management-core.json'
       overrideParameters: '-serviceName ${{ parameters.apiAppAPIMName }}3 -publisherName ${{ parameters.organizationName }} -publisherEmail ${{ parameters.adminEmail }}'
       deploymentOutputs: ResourceGroupDeploymentOutputs
 
@@ -79,7 +79,7 @@ jobs:
       azureSubscription: ${{ parameters.azureSubscription }}
       resourceGroupName: ${{ parameters.resourceGroupName }}
       location: ${{ parameters.region }}
-      csmFile: '$(templateDirectory)/appservice-web-api.json'
+      csmFile: '$(templateDirectory)\appservice-web-api.json'
       overrideParameters: '-appName ${{ parameters.apiAppName }}'
       deploymentOutputs: ResourceGroupDeploymentOutputs
 
@@ -89,6 +89,6 @@ jobs:
       azureSubscription: ${{ parameters.azureSubscription }}
       resourceGroupName: ${{ parameters.resourceGroupName }}
       location: ${{ parameters.region }}
-      csmFile: '$(templateDirectory)/appservice-web-app.json'
+      csmFile: '$(templateDirectory)\appservice-web-app.json'
       overrideParameters: '-appName ${{ parameters.webAppName }}'
       deploymentOutputs: ResourceGroupDeploymentOutputs
