--- a/.azdo/pipelines/pipes/templates/deploy-apps-template.yml
+++ b/.azdo/pipelines/pipes/templates/deploy-apps-template.yml
@@ -19,12 +19,12 @@ parameters:
 
 # ----------------------------------------------------------------------------------------------------
 jobs:
-- deployment: Deploy
-  displayName: Deploy
+- deployment: DeployApps
+  displayName: Deploy Apps
   environment: ${{ parameters.environment }}
 
-- job: DeployApps
-  displayName: Deploy Apps
+- job: DeployAppsJob
+  displayName: Deploy Apps Job
   steps:
   - task: CmdLine@2
     inputs:
