--- a/.azdo/pipelines/pipes/build-infra-deploy-pipe.yml
+++ b/.azdo/pipelines/pipes/build-infra-deploy-pipe.yml
@@ -2,6 +2,10 @@
 # Pipe Template to build and deploy the entire application
 # ------------------------------------------------------------------------------------------------------------------------
 parameters:
+- name: createInfra
+  default: true
+- name: buildDeployApps
+  default: true
 - name: buildConfiguration
   default: 'Release'
 - name: apiRootDirectory
@@ -59,43 +63,46 @@ stages:
         workingDirectoryCode: ${{ parameters.workingDirectoryCode }}
         workingDirectoryInfra: ${{ parameters.workingDirectoryInfra }}
 
-  - template: templates/build-webapi-template.yml
-    parameters:
-      buildConfiguration: 'Release'
-      rootDirectory: ${{ parameters.apiSourcePath }}
+  - ${{ if eq(lower(parameters.buildDeployApps), 'true') }}:
+    - template: templates/build-webapi-template.yml
+      parameters:
+        buildConfiguration: 'Release'
+        rootDirectory: ${{ parameters.apiSourcePath }}
 
-  - template: templates/build-webapp-template.yml
-    parameters:
-      buildConfiguration: 'Release'
-      rootDirectory: ${{ parameters.apiSourcePath }}
-
-# ------------------------------------------------------------------------------------------------------------------------
-- stage: CreateAzureInfra
-  displayName: Create Azure Infra
-  dependsOn: BuildApps
-  condition: succeeded('BuildApps')
-  jobs:
-  - template: templates/create-infra-template.yml
-    parameters:
-      azureSubscription: ${{ parameters.azureSubscription }}
-      webAppName:  ${{ parameters.webAppName }}
-      apiAppName:  ${{ parameters.apiAppName }}
-      apiAppAPIMName:  ${{ parameters.apiAppAPIMName }}
-      organizationName:  ${{ parameters.organizationName }}
-      adminEmail:  ${{ parameters.adminEmail }}
-      resourceGroupName:  ${{ parameters.resourceGroupName }}
-      region: ${{ parameters.region }}
+    - template: templates/build-webapp-template.yml
+      parameters:
+        buildConfiguration: 'Release'
+        rootDirectory: ${{ parameters.apiSourcePath }}
 
 # ------------------------------------------------------------------------------------------------------------------------
-- stage: DeployApp
-  displayName: Deploy App
-  dependsOn: CreateAzureInfra
-  condition: succeeded('CreateAzureInfra')
-  jobs:
-  - template: templates/deploy-apps-template.yml
-    parameters:
-      azureSubscription: ${{ parameters.azureSubscription }}
-      webAppName:  ${{ parameters.webAppName }}
-      webAppPackageName: ${{ parameters.webAppPackageName }}
-      apiAppName:  ${{ parameters.apiAppName }}
-      apiPackageName: ${{ parameters.apiPackageName }}
+- ${{ if eq(lower(parameters.createInfra), 'true') }}:
+  - stage: CreateAzureInfra
+    displayName: Create Azure Infra
+    dependsOn: BuildApps
+    condition: succeeded('BuildApps')
+    jobs:
+    - template: templates/create-infra-template.yml
+      parameters:
+        azureSubscription: ${{ parameters.azureSubscription }}
+        webAppName:  ${{ parameters.webAppName }}
+        apiAppName:  ${{ parameters.apiAppName }}
+        apiAppAPIMName:  ${{ parameters.apiAppAPIMName }}
+        organizationName:  ${{ parameters.organizationName }}
+        adminEmail:  ${{ parameters.adminEmail }}
+        resourceGroupName:  ${{ parameters.resourceGroupName }}
+        region: ${{ parameters.region }}
+
+# ------------------------------------------------------------------------------------------------------------------------
+- ${{ if eq(lower(parameters.buildDeployApps), 'true') }}:
+  - stage: DeployApp
+    displayName: Deploy App
+    dependsOn: CreateAzureInfra
+    condition: succeeded('CreateAzureInfra')
+    jobs:
+    - template: templates/deploy-apps-template.yml
+      parameters:
+        azureSubscription: ${{ parameters.azureSubscription }}
+        webAppName:  ${{ parameters.webAppName }}
+        webAppPackageName: ${{ parameters.webAppPackageName }}
+        apiAppName:  ${{ parameters.apiAppName }}
+        apiPackageName: ${{ parameters.apiPackageName }}
