--- a/.azdo/pipelines/build-infra-deploy-pipeline.yml
+++ b/.azdo/pipelines/build-infra-deploy-pipeline.yml
@@ -17,7 +17,7 @@ parameters:
   - name: buildDeployApps
     displayName: Build and Deploy Apps
     type: boolean
-    default: false
+    default: true
   - name: runDevSecOpsScan
     displayName: Run MS DevSecOps Scan
     type: boolean
